# zed2i_calibrate

./: .gitignore  README.md  pyproject.toml
config/: calibration.yaml
docs/: operation_guide.md
scripts/: 00_generate_board.py  01_export_zed_intrinsics.py  02_stereo_calibrate.py  03_collect_eye_on_base.py  04_collect_eye_on_hand.py  05_detect_charuco_batch.py  06_solve_handeye.py  07_validate.py  _shared_handeye.py  run_dry_run.py
src/zed2i_calibrate/: __init__.py  board.py  camera.py  config.py  handeye_collect.py  handeye_solve.py  io.py  robot_mock.py  stereo_calibrate.py  validate.py
